--- a/index.html
+++ b/index.html
@@ -160,6 +160,12 @@
           margin: 10px;
         }
       }
+
+       @media screen and (min-width: 950px) {
+        .wrapper {
+          width: 60%;
+        }
+         
     </style>
   </head>
   <body>
